# pydracula-pyside6-template

./: .gitignore  MANIFEST.in  README.md  _____setup.py  build.py  build_old.py  requirements.txt  run.py  setup.cfg  setup.py
_packaging/: build_linux.py  build_windows.py  win.spec
_packaging/flatpak/: build_flatpak.py  com.lgili.pydracula.yaml
_scripts/: build-translations.sh  build-windows.sh
build_system/icons/: README.md
build_system/resources/: database.db
docs/: README.MD  dev-setup-linux.md  dev-setup-windows.md
pydracula/: __main__.py
pydracula/controllers/: SingleApplication.py  app_functions.py  main_window.py  splash_screen.py  ui_functions.py
pydracula/model/: db.py  user.py
pydracula/model/repository/: database.py  repository.py
pydracula/view/: resources.qrc  resources_rc.py  ui_main_window.py
share/applications/: com.lgili.pydracula.desktop
share/metainfo/: com.lgili.pydracula.appdata.xml
src/pydracula/: __init__.py  __main__.py
src/pydracula/controllers/: SingleApplication.py  main_window.py  splash_screen.py
src/pydracula/model/: notes.py
src/pydracula/model/repository/: database.py  repository.py
src/pydracula/view/: main_window.py  main_window.ui  main_window_ui.py  resources.qrc  resources_rc.py  splash_screen.py  ui_splash_screen.py
