[metadata]
name = pydracula

[options]
package_dir =
    = src
    # directory containing all the packages (e.g.  src/mypkg, src/mypkg/subpkg1, ...)
packages=find:
include_package_data = True
python_requires = >=3.5
install_requires =
    PySide6==6.4.0
    sqlalchemy==2.0.2

[options.packages.find]
where=src


